# rocket

./: README.md
api/: Cargo.toml
api/src/: main.rs
app/: Cargo.toml  seed.csv
app/migrations/: 20231226140714_create_users_table.up.sql  20240201142941_create_todo_table.up.sql
app/src/: database.rs  error.rs  main.rs  todo.rs
app/src/database/: todo.rs  user.rs
