[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
